manifests/pipeline-test/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipeline-test
  namespace: pipeline-test
spec:
  selector:
    app: pipeline-test
  ports:
    - name: http
      port: 80
      targetPort: 5000
