manifests/pipeline-test/40-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pipeline-test
  namespace: pipeline-test
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pipeline-test.jmarcelocarvalho.com`)
      kind: Rule
      services:
        - name: pipeline-test
          port: 80
  tls:
    secretName: pipeline-test-tls
